--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-<!--     <link rel="icon" href="%PUBLIC_URL%/logo.png" /> -->
+    <link rel="icon" href="%PUBLIC_URL%/logo.png" />
     <meta name="keywords" content = "food, delivery,order food, restuarent, healthy foods"/>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
@@ -29,7 +29,7 @@
 
     <meta property="og:title" content="Food Delivery" />
     <meta property="og:description" content="We are providing the best foods" />
-   
+    <meta property="og:image" content="%PUBLIC_URL%/logo.png" />
     <meta property="og:url" content="https://restuarent.com" />
   </head>
   <body>
