--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/logo.png" />
+<!--     <link rel="icon" href="%PUBLIC_URL%/logo.png" /> -->
     <meta name="keywords" content = "food, delivery,order food, restuarent, healthy foods"/>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
@@ -10,7 +10,7 @@
       name="description"
       content="we are providing the best foods"
     />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo.png" />
+<!--     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo.png" /> -->
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
@@ -29,7 +29,7 @@
 
     <meta property="og:title" content="Food Delivery" />
     <meta property="og:description" content="We are providing the best foods" />
-    <meta property="og:image" content="%PUBLIC_URL%/logo.png" />
+<!--     <meta property="og:image" content="%PUBLIC_URL%/logo.png" /> -->
     <meta property="og:url" content="https://restuarent.com" />
   </head>
   <body>
