--- a/public/index.html
+++ b/public/index.html
@@ -29,7 +29,7 @@
 
     <meta property="og:title" content="Food Delivery" />
     <meta property="og:description" content="We are providing the best foods" />
-<!--     <meta property="og:image" content="%PUBLIC_URL%/logo.png" /> -->
+    <meta property="og:image" content="%PUBLIC_URL%/logo.png" />
     <meta property="og:url" content="https://restuarent.com" />
   </head>
   <body>
