--- a/public/index.html
+++ b/public/index.html
@@ -1,4 +1,4 @@
-<!-- <!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="utf-8" />
@@ -26,31 +26,4 @@
     <div id="root"></div>
     
   </body>
-</html> -->
-// src/components/SEOHelmet.js
-
-import React from 'react';
-import { Helmet } from 'react-helmet';
-
-const SEOHelmet = ({ title, description, keywords, ogTitle, ogDescription, ogUrl, ogImage, ogImageAlt, ogImageWidth, ogImageHeight }) => {
-  return (
-    <Helmet>
-      <title>{title}</title>
-      <meta name="description" content={description} />
-      <meta name="keywords" content={keywords} />
-      <meta property="og:title" content={ogTitle} />
-      <meta property="og:description" content={ogDescription} />
-      <meta property="og:type" content="website" />
-      <meta property="og:url" content={ogUrl} />
-      <meta property="og:image" content={ogImage} />
-      <meta property="og:image:alt" content={ogImageAlt} />
-      <meta property='og:image:width' content={ogImageWidth} />
-      <meta property='og:image:height' content={ogImageHeight} />
-      <script type="application/ld+json">
-        {JSON.stringify(generateJsonLd())}
-      </script>
-    </Helmet>
-  );
-};
-
-export default SEOHelmet;
+</html>
