--- a/public/index.html
+++ b/public/index.html
@@ -6,10 +6,7 @@
     <meta name="keywords" content = "food, delivery,order food, restuarent, healthy foods"/>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta
-      name="description"
-      content="we are providing the best foods"
-    />
+    <meta name="description" content="we are providing the best foods"/>
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo.png" />
     
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
