--- a/public/index.html
+++ b/public/index.html
@@ -2,12 +2,15 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/pizza.jpg" />
+    <link rel="icon" href="%PUBLIC_URL%/logo.png" />
     <meta name="keywords" content = "food, delivery,order food, restuarent, healthy foods"/>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta name="description" content="we are providing the best foods"/>
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/pizza.jpg" />
+    <meta
+      name="description"
+      content="we are providing the best foods"
+    />
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo.png" />
     
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     
@@ -15,7 +18,7 @@
 
     <meta property="og:title" content="Food Delivery" />
     <meta property="og:description" content="We are providing the best foods" />
-    <meta property="og:image" content="%PUBLIC_URL%/pizza.jpg" />
+    <meta property="og:image" content="%PUBLIC_URL%/logo.png" />
     <meta property="og:url" content="https://restuarent.com" />
   </head>
   <body>
