--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/logo.png" />
+    <link rel="icon" href="https://res.cloudinary.com/dhevjlnnc/image/upload/v1735892233/dosa1_cvbvnr.jpg" />
     <meta name="keywords" content = "food, delivery,order food, restuarent, healthy foods"/>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
@@ -10,7 +10,7 @@
       name="description"
       content="we are providing the best foods"
     />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo.png" />
+    <link rel="apple-touch-icon" href="https://res.cloudinary.com/dhevjlnnc/image/upload/v1735892233/dosa1_cvbvnr.jpg" />
     
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     
