--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,7 @@
       name="description"
       content="we are providing the best foods"
     />
-    <link rel="apple-touch-icon" href="https://res.cloudinary.com/dhevjlnnc/image/upload/v1735892233/dosa1_cvbvnr.jpg" />
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo.png" />
     
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     
@@ -18,7 +18,7 @@
 
     <meta property="og:title" content="Food Delivery" />
     <meta property="og:description" content="We are providing the best foods" />
-    <meta property="og:image" content="https://res.cloudinary.com/dhevjlnnc/image/upload/v1735892233/dosa1_cvbvnr.jpg" />
+    <meta property="og:image" content="%PUBLIC_URL%/logo.png" />
     <meta property="og:url" content="https://foods-1.onrender.com" />
   </head>
   <body>
